--- a/css/backoffice/utils/helpers/_misc.scss
+++ b/css/backoffice/utils/helpers/_misc.scss
@@ -20,6 +20,34 @@
 	display: none !important; /* Note: !important is necessary as it needs to overload any standard rules */
 }
 
+/* Used on all ancestors when an element needs to be fullscreen (see .ibo-is-fullscreen) */
+html.ibo-has-fullscreen-descendant{
+	position: fixed !important;
+	width: 0 !important;
+	height: 0 !important;
+}
+body.ibo-has-fullscreen-descendant{
+	width: 0 !important;
+	height: 0 !important;
+	overflow: hidden !important;
+}
+.ibo-has-fullscreen-descendant{
+	position: static !important;
+	overflow: visible !important;
+	z-index: 9000 !important;
+}
+/* Used on a fullscreen element (see .ibo-has-fullscreen-descendant) */
+.ibo-is-fullscreen{
+	position: absolute;
+	top: 0 !important;
+	left: 0 !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	width: 100vw;
+	height: 100vh;
+	overflow: auto;
+}
+
 %ibo-fully-centered-content{
 	display: flex;
 	justify-content: center;
